Add /volumes endpoint
