# components/ledger/internal/api/v2/utils.go
@@ -12,19 +12,52 @@ import (
 	"github.com/formancehq/stack/libs/go-libs/collectionutils"
 	"github.com/formancehq/stack/libs/go-libs/pointer"
 	"github.com/formancehq/stack/libs/go-libs/query"
+	sharedapi "github.com/formancehq/stack/libs/go-libs/api"
 )
+
+func getPITOOTFilter(r *http.Request) (*ledgerstore.PITFilter, error) {
+	pitString := r.URL.Query().Get("pit")
+	ootString := r.URL.Query().Get("oot")
+
+	pit := time.Now()
+	oot := time.Time{}
+
+	if pitString != "" {
+		var err error
+		pit, err = time.ParseTime(pitString)
+		if err != nil {
+			return nil,err
+		}
+	}
+
+	if ootString != "" {
+		var err error 
+		oot, err = time.ParseTime(ootString)
+		if err != nil {
+			return nil, err
+		}
+	}
+
+	return &ledgerstore.PITFilter{
+		PIT: &pit,
+		OOT: &oot,
+	}, nil
+}
+
 
 func getPITFilter(r *http.Request) (*ledgerstore.PITFilter, error) {
 	pitString := r.URL.Query().Get("pit")
-	if pitString == "" {
-		return &ledgerstore.PITFilter{
-			PIT: pointer.For(time.Now()),
-		}, nil
+
+	pit := time.Now()
+
+	if pitString != "" {
+		var err error
+		pit, err = time.ParseTime(pitString)
+		if err != nil {
+			return nil,err
+		}
 	}
-	pit, err := time.ParseTime(pitString)
-	if err != nil {
-		return nil, err
-	}
+
 	return &ledgerstore.PITFilter{
 		PIT: &pit,
 	}, nil
@@ -39,6 +72,20 @@ func getPITFilterWithVolumes(r *http.Request) (*ledgerstore.PITFilterWithVolumes
 		PITFilter:              *pit,
 		ExpandVolumes:          collectionutils.Contains(r.URL.Query()["expand"], "volumes"),
 		ExpandEffectiveVolumes: collectionutils.Contains(r.URL.Query()["expand"], "effectiveVolumes"),
+	}, nil
+}
+
+func getPITOOTFilterForVolumes(r *http.Request) (*ledgerstore.PITFilterForVolumes, error) {
+	pit, err := getPITOOTFilter(r)
+	if err != nil {
+		return nil, err
+	}
+
+	UseInsertionDate := sharedapi.QueryParamBool(r, "use_insertion_date")
+
+	return &ledgerstore.PITFilterForVolumes{
+		PITFilter: *pit,
+		UseInsertionDate: UseInsertionDate,
 	}, nil
 }
 
@@ -73,4 +120,25 @@ func getPaginatedQueryOptionsOfPITFilterWithVolumes(r *http.Request) (*ledgersto
 	return pointer.For(ledgerstore.NewPaginatedQueryOptions(*pitFilter).
 		WithQueryBuilder(qb).
 		WithPageSize(pageSize)), nil
+}
+
+func getPaginatedQueryOptionsOfPITOOTFilterForVolumes(r *http.Request) (*ledgerstore.PaginatedQueryOptions[ledgerstore.PITFilterForVolumes], error) {
+	qb, err := getQueryBuilder(r)
+	if err != nil {
+		return nil, err
+	}
+	
+	pitFilter, err := getPITOOTFilterForVolumes(r)
+	if err != nil {
+		return nil, err
+	}
+
+	pageSize, err := bunpaginate.GetPageSize(r)
+	if err != nil {
+		return nil, err
+	}
+
+	return pointer.For(ledgerstore.NewPaginatedQueryOptions(*pitFilter).
+	WithPageSize(pageSize).
+	WithQueryBuilder(qb)), nil
 }
