# components/ledger/openapi/v2.yaml
@@ -1044,6 +1044,59 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/V2ErrorResponse'
+  
+  /v2/{ledger}/volumes:
+    get:
+      tags:
+        - Ledger
+      x-speakeasy-group: ledger
+      summary: Get list of volumes with balances for (account/asset)
+      operationId: v2GetVolumesWithBalances
+      parameters:
+        - name: ledger
+          in: path
+          description: Name of the ledger.
+          required: true
+          schema:
+            type: string
+            example: ledger001
+        - name: pit
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: oot
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: use_insertion_date
+          in: query
+          description: Use insertion date instead of effective date
+          required: false
+          schema:
+            type: boolean
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/V2VolumesWithBalanceCursorResponse'
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/V2ErrorResponse'
 
   /v2/{ledger}/logs:
     get:
@@ -1253,6 +1306,58 @@ components:
         data:
           $ref: '#/components/schemas/V2AssetsBalances'
 
+    V2VolumesWithBalanceCursorResponse:
+      type: object
+      required:
+        - cursor
+      properties:
+        cursor:
+          type: object
+          required:
+            - pageSize
+            - hasMore
+            - data
+          properties:
+            pageSize:
+              type: integer
+              format: int64
+              minimum: 1
+              maximum: 1000
+              example: 15
+            hasMore:
+              type: boolean
+              example: false
+            previous:
+              type: string
+              example: "YXVsdCBhbmQgYSBtYXhpbXVtIG1heF9yZXN1bHRzLol="
+            next:
+              type: string
+              example: ""
+            data:
+              type: array
+              items:
+                $ref: '#/components/schemas/V2VolumesWithBalance'
+    
+     V2VolumesWithBalance:
+      type: object
+      properties:
+        account:
+          type: string
+        asset:
+          type: string
+        input:
+          type: int64
+        output:
+          type: int64 
+        balance:
+          type: int64
+      required:
+        - account
+        - asset
+        - input
+        - output
+        - balance
+
     V2Metadata:
       type: object
       additionalProperties:
@@ -1311,6 +1416,8 @@ components:
       example:
         USD: 100
         EUR: 12
+
+      
 
     V2Posting:
       type: object
